# stock-trending

./: .env.example  .gitignore  AGENTS.md  ARCH.md  CLAUDE.md  README.md  pyproject.toml  stock-trend-research-workflow-plan-v3_0.md  stock-trend-workflow-plan-v2_2.md
schemas/: analyst_output.schema.json  approval_record.schema.json  cycle_context.schema.json  delivery_outbox_item.schema.json  email_delivery_request.schema.json  execution_intent.schema.json  fact.schema.json  facts_block.schema.json  order_event.schema.json  outcome.schema.json  research_signal.schema.json  run_manifest.schema.json  semantic_verdict.schema.json  signal_proposal.schema.json  social_browser_snapshot.schema.json  source_heartbeat.schema.json  source_snapshot.schema.json  universe.schema.json  validation_report.schema.json
spec/: approval-policy.yaml  evaluation-policy.yaml  risk-policy.yaml  sources.yaml  strategy.yaml  tiers.yaml  universe.yaml  workflow.yaml
stocktrend/: __init__.py  cli.py  committer.py  config.py  contracts.py  demo.py  email_rendering.py  errors.py  evaluation.py  execution.py  facts.py  notifications.py  outbox.py  providers.py  rendering.py  screening.py  security.py  sourcing.py  state.py  util.py  validation.py  web_sources.py  workflow.py
templates/: digest.md
tests/: conftest.py  test_contracts.py  test_email_rendering.py  test_evaluation.py  test_execution.py  test_facts_and_screening.py  test_notifications.py  test_providers.py  test_research_boundary.py  test_security.py  test_sourcing.py  test_state.py  test_validation.py  test_web_sources.py  (+1 more)
(+14 files in other folders)
